--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 __pycache__/
 *.py[cod]
 *.pyo
@@ -12,6 +11,7 @@ venv/
 fitness_tracker.db
 
 # Pipenv files
+Pipfile
 Pipfile.lock
 
 # VSCode settings
